Fix z-index of modal

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -405,7 +405,7 @@ p, ul {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 100;
+  z-index: 10000;
   background-color: rgba(0, 0, 0, 0.6);
 }
 /* line 87, ../src/sass/style.scss */
